Fixing truncated title

--- a/wp/wp-content/themes/xtra/style.css
+++ b/wp/wp-content/themes/xtra/style.css
@@ -270,7 +270,7 @@ nav {
 			margin-top: 6px;
 			margin-bottom: 10px;
 			padding: 0 4px 0 4px;
-			font-size: 22px;
+			font-size: 21px;
 			line-height: 24px;
 			font-weight: 800;
 		}
